--- a/presentation/pubspec.yaml
+++ b/presentation/pubspec.yaml
@@ -41,9 +41,16 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - android.png
+     - fuchsia.png
+     - dart.png
+     - ios.png
+     - hummingbird.png
+     - macos.png
+     - skia.png
+     - tux.png
+     - windows.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
