Finish first part of the presentation

--- a/presentation/pubspec.yaml
+++ b/presentation/pubspec.yaml
@@ -46,6 +46,7 @@ flutter:
      - fuchsia.png
      - dart.png
      - ios.png
+     - kermit.png
      - hummingbird.png
      - macos.png
      - skia.png
