--- a/presentation/pubspec.yaml
+++ b/presentation/pubspec.yaml
@@ -52,6 +52,7 @@ flutter:
      - skia.png
      - tux.png
      - windows.png
+     - flutterlayers.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
