--- a/presentation/pubspec.yaml
+++ b/presentation/pubspec.yaml
@@ -53,6 +53,9 @@ flutter:
      - tux.png
      - windows.png
      - flutterlayers.png
+     - kermitquestion.png
+     - anotherkermit.png
+     - bloc.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
